--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <th>ดอกเบี้ยสะสม</th>
           <th>ดอกเบี้ยเดือนหน้า</th>
           <th>ครบกำหนดถัดไป</th>
-          <th>คืนเงินต้น</th>
+          <th>คืนเงินต้น / จ่ายดอก</th>
           <th>ลบ</th>
         </tr>
       </thead>
@@ -93,26 +93,10 @@
       return (loan.repayments || []).reduce((sum, r) => sum + parseFloat(r.amount), 0);
     }
 
-    function updateChart(data) {
-      const canvas = document.getElementById('loanChart');
-      if (!canvas) return;
-      const ctx = canvas.getContext('2d');
-      if (window.loanChart && typeof window.loanChart.destroy === 'function') {
-        window.loanChart.destroy();
-      }
-      window.loanChart = new Chart(ctx, {
-        type: 'bar',
-        data: {
-          labels: data.map(l => l.name),
-          datasets: [{
-            label: 'เงินต้นคงเหลือ (บาท)',
-            data: data.map(l => l.remaining),
-            backgroundColor: '#ff9eb2',
-            borderRadius: 10
-          }]
-        },
-        options: { responsive: true, maintainAspectRatio: false, plugins: { legend: { display: false } }, scales: { y: { beginAtZero: true } } }
-      });
+    function markInterestPaid(index) {
+      loans[index].lastInterestPaid = new Date().toISOString();
+      localStorage.setItem('loans', JSON.stringify(loans));
+      calcSummary();
     }
 
     function calcSummary() {
@@ -125,20 +109,30 @@
 
       loans.forEach((loan, index) => {
         const totalPaid = getTotalPaid(loan);
-        const netPrincipal = loan.principal - totalPaid;
-        const daysPassed = Math.floor((now - new Date(loan.startDate)) / (1000 * 60 * 60 * 24));
+        let netPrincipal = loan.principal - totalPaid;
+        if (netPrincipal < 0) netPrincipal = 0;
+
+        let daysPassed = Math.floor((now - new Date(loan.startDate)) / (1000 * 60 * 60 * 24));
+        if (daysPassed < 0) daysPassed = 0;
+
         const interestPerDay = (netPrincipal * loan.rate / 100) / 30;
         const accumulated = parseFloat((interestPerDay * daysPassed).toFixed(2));
         const nextMonth = parseFloat((netPrincipal * loan.rate / 100).toFixed(2));
-        const nextDue = new Date(loan.startDate);
-        nextDue.setMonth(nextDue.getMonth() + 1);
+
+        const loanStartDate = new Date(loan.startDate);
+        const monthsSinceStart = Math.floor((now.getFullYear() - loanStartDate.getFullYear()) * 12 + (now.getMonth() - loanStartDate.getMonth()));
+        const lastDue = new Date(loanStartDate);
+        lastDue.setMonth(loanStartDate.getMonth() + monthsSinceStart);
+
+        const paidInterest = loan.lastInterestPaid && !isNaN(Date.parse(loan.lastInterestPaid)) && new Date(loan.lastInterestPaid) >= lastDue;
+        const rowClass = netPrincipal > 0 && !paidInterest ? 'style="background-color:#ffcccc"' : '';
 
         totalPrincipal += netPrincipal;
         totalAccumulated += accumulated;
         totalNextMonth += nextMonth;
 
         tableBody.innerHTML += `
-          <tr>
+          <tr ${rowClass}>
             <td>${loan.name}</td>
             <td>${netPrincipal.toLocaleString()}</td>
             <td>${loan.rate}%</td>
@@ -146,8 +140,11 @@
             <td>${daysPassed} วัน</td>
             <td>${accumulated.toLocaleString()}</td>
             <td>${nextMonth.toLocaleString()}</td>
-            <td>${formatDate(nextDue)}</td>
-            <td><button onclick="addRepayment(${index})">➕</button></td>
+            <td>${formatDate(lastDue)}</td>
+            <td>
+              <button onclick="addRepayment(${index})">➕</button>
+              <button onclick="markInterestPaid(${index})">💸</button>
+            </td>
             <td><button onclick="deleteLoan(${index})">🗑️</button></td>
           </tr>`;
         chartData.push({ name: loan.name, remaining: netPrincipal });
@@ -162,13 +159,95 @@
       else if (window.loanChart && typeof window.loanChart.destroy === 'function') window.loanChart.destroy();
     }
 
+    function updateChart(data) {
+      const canvas = document.getElementById('loanChart');
+      if (!canvas) return;
+      const ctx = canvas.getContext('2d');
+      if (window.loanChart && typeof window.loanChart.destroy === 'function') {
+        window.loanChart.destroy();
+      }
+      const maxAmount = Math.max(...data.map(d => d.remaining));
+      window.loanChart = new Chart(ctx, {
+        type: 'bar',
+        data: {
+          labels: data.map(l => l.name),
+          datasets: [{
+            label: 'เงินต้นคงเหลือ (บาท)',
+            data: data.map(l => l.remaining),
+            backgroundColor: data.map(l => `rgba(255, 105, 135, ${Math.max(0.3, l.remaining / maxAmount)})`),
+            borderRadius: 10
+          }]
+        },
+        options: {
+          responsive: true,
+          maintainAspectRatio: false,
+          plugins: { legend: { display: false } },
+          scales: { y: { beginAtZero: true } }
+        }
+      });
+    }
+
     function addRepayment(index) {
       const amount = prompt('กรุณากรอกจำนวนเงินต้นที่คืน (บาท):');
-      if (!amount || isNaN(amount) || parseFloat(amount) <= 0) { alert('กรุณากรอกจำนวนที่ถูกต้อง'); return; }
+      if (!amount || isNaN(amount) || parseFloat(amount) <= 0) {
+        alert('กรุณากรอกจำนวนที่ถูกต้อง'); return;
+      }
       if (!loans[index].repayments) loans[index].repayments = [];
       loans[index].repayments.push({ amount: parseFloat(amount), date: new Date().toISOString() });
       localStorage.setItem('loans', JSON.stringify(loans));
       calcSummary();
+    }
+
+    function deleteLoan(index) {
+      if (confirm('คุณแน่ใจว่าต้องการลบลูกหนี้คนนี้?')) {
+        loans.splice(index, 1);
+        localStorage.setItem('loans', JSON.stringify(loans));
+        calcSummary();
+      }
+    }
+
+    function downloadExcel() {
+      const wb = XLSX.utils.book_new();
+      const wsData = [['ชื่อ', 'เงินต้นคงเหลือ', 'ดอกเบี้ย/เดือน', 'วันที่เริ่ม', 'วันที่ผ่านมา', 'ดอกเบี้ยสะสม', 'ดอกเบี้ยเดือนหน้า', 'ครบกำหนดถัดไป']];
+      const now = new Date();
+      loans.forEach(loan => {
+        const totalPaid = getTotalPaid(loan);
+        const netPrincipal = loan.principal - totalPaid;
+        const daysPassed = Math.floor((now - new Date(loan.startDate)) / (1000 * 60 * 60 * 24));
+        const interestPerDay = (netPrincipal * loan.rate / 100) / 30;
+        const accumulated = (interestPerDay * daysPassed).toFixed(2);
+        const nextMonth = (netPrincipal * loan.rate / 100).toFixed(2);
+        const nextDue = new Date(loan.startDate); nextDue.setMonth(nextDue.getMonth() + 1);
+        wsData.push([loan.name, netPrincipal, loan.rate + '%', formatDate(loan.startDate), `${daysPassed} วัน`, parseFloat(accumulated), parseFloat(nextMonth), formatDate(nextDue)]);
+      });
+      XLSX.utils.book_append_sheet(wb, XLSX.utils.aoa_to_sheet(wsData), 'Loan Summary');
+      XLSX.writeFile(wb, 'loan_summary.xlsx');
+    }
+
+    function uploadData(event) {
+      const file = event.target.files[0];
+      if (!file) return;
+      const reader = new FileReader();
+      reader.onload = e => {
+        try {
+          const newData = JSON.parse(e.target.result);
+          if (!Array.isArray(newData)) throw 'รูปแบบข้อมูลไม่ถูกต้อง';
+          newData.forEach(item => {
+            if (typeof item.name !== 'string') throw 'ชื่อไม่ถูกต้อง';
+            if (typeof item.principal !== 'number' || item.principal < 0) throw 'เงินต้นไม่ถูกต้อง';
+            if (typeof item.rate !== 'number' || item.rate < 0) throw 'อัตราดอกเบี้ยไม่ถูกต้อง';
+            if (typeof item.startDate !== 'string' || isNaN(Date.parse(item.startDate))) throw 'วันที่เริ่มไม่ถูกต้อง';
+            if (!Array.isArray(item.repayments)) throw 'ประวัติการคืนเงินไม่ถูกต้อง';
+          });
+          loans = newData;
+          localStorage.setItem('loans', JSON.stringify(loans));
+          calcSummary();
+          alert('นำเข้าข้อมูลสำเร็จ');
+        } catch (err) {
+          alert('เกิดข้อผิดพลาด: ' + err);
+        }
+      };
+      reader.readAsText(file);
     }
 
     document.getElementById('loanForm').addEventListener('submit', e => {
@@ -195,49 +274,6 @@
         popup.classList.remove('show');
         setTimeout(() => popup.style.display = 'none', 300);
       }, 2000);
-    }
-
-    function deleteLoan(index) {
-      if (confirm('คุณแน่ใจว่าต้องการลบลูกหนี้คนนี้?')) {
-        loans.splice(index, 1);
-        localStorage.setItem('loans', JSON.stringify(loans));
-        calcSummary();
-      }
-    }
-
-    function downloadExcel() {
-      const wb = XLSX.utils.book_new();
-      const wsData = [['ชื่อ', 'เงินต้นคงเหลือ', 'ดอกเบี้ย/เดือน', 'วันที่เริ่ม', 'วันที่ผ่านมา', 'ดอกเบี้ยสะสม', 'ดอกเบี้ยเดือนหน้า', 'ครบกำหนดถัดไป']];
-      const now = new Date();
-      loans.forEach(loan => {
-        const totalPaid = getTotalPaid(loan);
-        const netPrincipal = loan.principal - totalPaid;
-        const daysPassed = Math.floor((now - new Date(loan.startDate)) / (1000 * 60 * 60 * 24));
-        const interestPerDay = (netPrincipal * loan.rate / 100) / 30;
-        const accumulated = (interestPerDay * daysPassed).toFixed(2);
-        const nextMonth = (netPrincipal * loan.rate / 100).toFixed(2);
-        const nextDue = new Date(loan.startDate); nextDue.setMonth(nextDue.getMonth() + 1);
-        wsData.push([loan.name, netPrincipal, loan.rate + '%', formatDate(loan.startDate), `${daysPassed} วัน`, parseFloat(accumulated), parseFloat(nextMonth), formatDate(nextDue.toISOString())]);
-      });
-      XLSX.utils.book_append_sheet(wb, XLSX.utils.aoa_to_sheet(wsData), 'Loan Summary');
-      XLSX.writeFile(wb, 'loan_summary.xlsx');
-    }
-
-    function uploadData(event) {
-      const file = event.target.files[0];
-      if (!file) return;
-      const reader = new FileReader();
-      reader.onload = e => {
-        try {
-          const newData = JSON.parse(e.target.result);
-          if (!Array.isArray(newData)) throw 'รูปแบบข้อมูลไม่ถูกต้อง';
-          loans = newData;
-          localStorage.setItem('loans', JSON.stringify(loans));
-          calcSummary();
-          alert('นำเข้าข้อมูลสำเร็จ');
-        } catch (err) { alert('เกิดข้อผิดพลาด: ' + err); }
-      };
-      reader.readAsText(file);
     }
 
     calcSummary();
